# arogyax

./: .gitignore  README.md  frontend.env.production.example  run.py
backend/: main.py  pyproject.toml  requirements.txt  test_refill_alerts.py
backend/agents/: __init__.py  conversational_agent.py  graph.py  inventory_agent.py  notification_agent.py  predictive_agent.py  refill_analyzer.py  safety_agent.py  safety_auditor_agent.py  state.py
backend/core/: config.py  database.py  exceptions.py  security.py
backend/models/: alert.py  order.py  product.py
backend/observability/: langfuse_client.py
backend/routers/: alerts.py  decisions.py  history.py  inventory.py  orders.py  prescriptions.py  webhooks.py  whatsapp.py
backend/scripts/: proactive_refill_alerts.py  seed_supabase.py  update_user_email.py
backend/services/: __init__.py  email_service.py  prescription_ocr.py  twilio_service.py
frontend/: middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/admin/: AdminNotificationPopup.tsx  AlertsPanel.tsx  AnalyticsDashboard.tsx  DecisionLedger.tsx  InventoryTable.tsx  LowStockAlertPanel.tsx
frontend/components/chat/: CartReview.tsx  ChatWindow.tsx  MessageBubble.tsx  OrderConfirmed.tsx  OrderHistory.tsx  VoiceButton.tsx  (+2 more)
frontend/hooks/: useChat.ts  useVoice.ts
frontend/lib/: api.ts
frontend/types/: index.ts
(+3 files in other folders)
